# AgentSecrets

./: .continue-here.md  .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  HANDOFF.json  README.md  ROADMAP.md  SECURITY.md
.cargo/: audit.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  IDENTITY_MODEL.md  INDEX.md  INTEGRATION.md  OPENCLAW.md  OPENCLAW_THREAT_NOTES.md  OPERATIONS.md  PLATFORM_SUPPORT.md  PROVIDER_MEDIATION.md  QUICKSTART.md  RELEASE.md  SECURITY_GUARANTEES.md  SUPPORTED_HOSTS.md  THREAT_MODEL.md
docs/architecture/: ARCHITECTURE.md  OPENCLAW.md  OPENCLAW_THREAT_NOTES.md  THREAT_MODEL.md
docs/backlog/: INDEX.md
docs/operations/: OPERATIONS.md  TROUBLESHOOTING.md
docs/product/: ADAPTERS.md  IDENTITY_MODEL.md  INTEGRATION.md  PLATFORM_SUPPORT.md  QUICKSTART.md  REDACTION_POLICY.md  (+3 more)
launchd/: com.secret-broker.plist
migrations/: 0001_init.sql  0002_capability_binding.sql  0003_trusted_input_sessions.sql  0004_v4_policy_and_identity_context.sql
scripts/: backup-sqlite.sh  check-external-host-ship-gate.sh  check-security-claims.sh  check-v2-ship-gate.sh  check-v3-ship-gate.sh  check-v4-ship-gate.sh  healthcheck.sh  restore-sqlite.sh  run-adapter-e2e.sh  run-adversarial-suite.sh  run-e2e-harness.sh  run-openclaw-e2e.sh  run-provider-mediation-e2e.sh  run-rotation-recovery-drills.sh
src/: adapter.rs  audit.rs  auth.rs  identity.rs  keys.rs  lib.rs  main.rs  policy.rs  provider.rs
systemd/: secret-broker-backup.service  secret-broker-backup.timer  secret-broker.service
windows/: install-secret-broker.ps1
(+37 files in other folders)
