[package]
name = "secret-broker"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "AgentSecrets: standalone zero-trust secret broker for OpenClaw and other agent runtimes"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
subtle = "2.6"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
time = "0.3"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
